feat: miner list api supports sorting by reward amount.
